# codex-bridge

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
