[package]
name = "codex-bridge"
version = "0.1.0"
edition = "2024"
description = "Use Codex CLI OAuth tokens as a local credential bridge"
license = "MIT"
repository = "https://github.com/Milind220/codex-bridge"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
